<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    >
    <TextView
        android:layout_marginTop="@dimen/resume_subtitle_gargin"
        android:layout_marginBottom="@dimen/resume_subtitle_gargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/person_info_title"
        android:textStyle="bold"
        android:textSize="@dimen/resume_other_title_size"
        android:background="@color/persion_info_backcolor"
        />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                />
            <EditText
                android:id="@+id/id_name"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marray"
                />
            <EditText
                android:id="@+id/id_marray"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                />
            <EditText
                android:id="@+id/id_birthday"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/political"
                />
            <EditText
                android:id="@+id/id_political"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

    </TableRow>

    <TableRow
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="1dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            />
        <EditText
            android:id="@+id/id_sex"
            style="@style/EditTextStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nation"
            />
        <EditText
            android:id="@+id/id_nation"
            style="@style/EditTextStyle"
            />
    </LinearLayout>

</TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                />
            <EditText
                android:id="@+id/id_degree"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                />
            <EditText
                android:id="@+id/id_phone"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major"
                />
            <EditText
                android:id="@+id/id_major"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />
            <EditText
                android:id="@+id/id_email"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                />
            <EditText
                android:id="@+id/id_address"
                style="@style/EditTextStyle"
                />
        </LinearLayout>

    </TableRow>

</TableLayout>
